# Sys-Neko-Bot

./: .gitignore  Cargo.toml
src/: main.rs
src/commands/info/: ping.rs
src/core/: event_handler.rs  mod.rs  neko_client.rs
src/events/: events.rs  ready.rs
src/functions/: fetch_member.rs  fetch_user.rs  mod.rs
src/handling/: command_handler.rs
src/tests/: reference.rs
src/traits/: command.rs
